# agentes_regios-signal

./: .gitignore  README.md
docs/: portable-stack-design.md  (+1 more)
neurable_connector/: README.md  pyproject.toml
neurable_connector/native/: .gitignore  Cargo.toml  README.md  build.sh
neurable_connector/native/src/: main.rs
neurable_connector/src/neurable_connector/: __init__.py  baseline.py  connector.py  pipeline.py  scores.py  source.py  types.py
neurable_connector/tests/: conftest.py  test_baseline.py  test_connector.py  test_live_mw75.py  test_pipeline.py  test_scores.py  test_source.py
pidview/: LICENSE  README.md  pyproject.toml
pidview/src/pidview/: __init__.py  registry.py  types.py  view.py
pidview/tests/: test_registry.py  test_view.py
sensable-portfolio/: .env.example  .gitignore  README.md  pyproject.toml
sensable-portfolio/config/: targets.yaml  tuning.yaml
sensable-portfolio/docs/: io-contract.md
sensable-portfolio/docs/superpowers/plans/: 2026-05-09-sensable-portfolio.md
sensable-portfolio/docs/superpowers/specs/: 2026-05-09-sensable-portfolio-design.md
sensable-portfolio/src/sensable_portfolio/: __init__.py  app.py  config.py  contracts.py
sensable-portfolio/src/sensable_portfolio/arms/: factory.py  registry.py
sensable-portfolio/src/sensable_portfolio/arms/prompts/: body_scan.yaml  breath_coach.yaml  deep_focus.yaml  env_tweak.yaml  micro_break.yaml  reframe_cbt.yaml  social_nudge.yaml
sensable-portfolio/src/sensable_portfolio/connector/: runner.py  source.py
sensable-portfolio/src/sensable_portfolio/evolve/: meta.py
sensable-portfolio/src/sensable_portfolio/graph/: decision.py  nodes.py
sensable-portfolio/src/sensable_portfolio/llm/: factories.py
sensable-portfolio/src/sensable_portfolio/policy/: base.py  linucb.py  persistence.py
sensable-portfolio/src/sensable_portfolio/renderer/: client.py
sensable-portfolio/src/sensable_portfolio/reward/: attribution.py  feedback.py  scheduler.py
sensable-portfolio/src/sensable_portfolio/signals/: features.py  view.py
sensable-portfolio/src/sensable_portfolio/storage/: db.py  models.py
sensable-portfolio/src/sensable_portfolio/stream/: pubsub.py  sinks.py
sensable-portfolio/src/sensable_portfolio/tick/: scheduler.py
sensable-portfolio/tests/: __init__.py  conftest.py  test_app.py  test_arms.py  test_config.py  test_connector_runner.py  test_contracts.py  test_e2e.py  test_evolver.py  test_fake_source.py  test_features.py  test_graph.py  test_io_contract.py  test_llm_factory.py  test_policy.py  test_pubsub.py  test_renderer_client.py  test_reward.py  test_scheduler.py  test_storage.py
(+2 files in other folders)
