[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurable_connector"
version = "0.1.0"
description = "MW75 EEG -> focus/stress within-subject z-scores at 4 Hz."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neurable_connector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
