[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pidview"
version = "0.1.0"
description = "Generic present/integral/differential view over scalar time series."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pidview"]
