[project]
name = "sensable-portfolio"
version = "0.1.0"
description = "Agent portfolio + contextual bandit for stress/focus interventions."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sse-starlette>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlmodel>=0.0.16",
  "aiosqlite>=0.19",
  "mabwiser>=2.7",
  "numpy>=1.26",
  "websockets>=12.0",
  "pyyaml>=6.0",
  "langchain>=0.2",
  "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pytest-mock>=3.12",
  "ruff>=0.4",
]
openai = ["langchain-openai>=0.1"]

[tool.uv.sources]
neurable_connector = { path = "../neurable_connector", editable = true }
pidview            = { path = "../pidview", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sensable_portfolio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
